inter-comm-ku8/micro2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-spring-gradle-service2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-label
