inter-comm-ku8/micro2/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-docker-gradle2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spring-docker-gradle-microtwo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-spring-gradle-service2
          servicePort: 8080
---
